--- a/demo/index.html
+++ b/demo/index.html
@@ -10,9 +10,7 @@
     	<p>Modern medicine has been hugely successful at reducing the impact of disease and increasing life expectancy. In spite of this, too much medical decision making is based on insufficient <cite data-term="evidence">evidence</cite>. As a result, doctors and other health professionals have sometimes harmed patients instead of helping them. It is essential that our decisions about what <cite data-term="treatment">treatments</cite> to use are based on <cite data-term="fair comparison of treatments">fair tests</cite> of their <cite data-term="treatment effect">effects</cite>.</p>
 		<script>
 			$(function() {
-				$('p').getit({
-					propertyName: "a custom value"
-				});
+				$('p').getit({ glossary: "getitglossary.org"});
 			});
 		</script>
 	</body>
