--- a/demo/index.html
+++ b/demo/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>jQuery Boilerplate</title>
-		<script src="../node_modules/jquery/dist/jquery.min.js"></script>
-		<script src="../src/jquery.getit.js"></script>
+		<title>GET-IT jQuery plugin</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+		<script src="../assets/js/jquery.toolpop.js"></script>
+		<script src="../dist/jquery-getit.js"></script>
+		<link rel="stylesheet" href="../assets/css/jquery.toolpop.css" />
+		<link rel="stylesheet" href="../dist/jquery-getit.css" />
 	</head>
 	<body>
     	<h1>Why do we need fair tests of treatments?</h1>
