--- a/demo/index.html
+++ b/demo/index.html
@@ -4,9 +4,9 @@
 		<title>GET-IT jQuery plugin</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 		<script src="../assets/js/jquery.toolpop.js"></script>
-		<script src="../dist/jquery-getit.js"></script>
+		<script src="../dist/jquery.getit.js"></script>
 		<link rel="stylesheet" href="../assets/css/jquery.toolpop.css" />
-		<link rel="stylesheet" href="../dist/jquery-getit.css" />
+		<link rel="stylesheet" href="../dist/jquery.getit.css" />
 	</head>
 	<body>
     	<h1>Why do we need fair tests of treatments?</h1>
