Corrected terms list

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <p><code>&lt;cite data-term="Number Needed to Harm"&gt;NNH&lt;/cite&gt;</code></p>
 
 <p>You can view a table of current terms, here:<br>
-<a href="http://getitglossary.org/dev/terms">List of terms in the <strong>GET-IT Glossary</strong></a></p>
+<a href="http://getitglossary.org/v1/terms-list">List of terms in the <strong>GET-IT Glossary</strong></a></p>
 
 <h3>
 <a id="initialising-and-running-the-plugin" class="anchor" href="#initialising-and-running-the-plugin" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Initialising and running the plugin</h3>
