Add in :monkey: png

--- a/index.html
+++ b/index.html
@@ -136,9 +136,10 @@ Designer: Tom Brooks</p>
 
 <hr/>
 <p><br/></p>
+
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support & Contact</h3>
-
+<img src="images/monkey.png" alt="Monkey" style="display: block;  clear: both;">
 <p>Having trouble with this plugin? Have an enquiry about accessing and using the GET-IT Glossary itself? [contact support] or raise an issue in the plugin's <a href="https://github.com/getitglossary/jquery-getit">Github repository</a> and we’ll help you sort it out.</p>
       </section>
     </div>
