Add in a script example

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 <pre><code>&lt;script src="<em>/path/to/js/folder/</em>jquery-getit.min.js"&gt;</code></pre>
 <p>Finally call the code in your page. It is recommended that you attach it to the element that contains the definitons. In this example, this is a <strong>&lt;div&gt;</strong> with an <strong>id</strong> of <strong><em>main-content</em></strong>.</p>
 <p>script example</p>
+<pre><code>$(document).ready( function(){
+    $('#main-content').getit();</code></pre>
+});
 <hr/>
 <h4>
 <a id="installing-with-bower" class="anchor" href="#installing-with-bower" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installing with Bower</h4>
