--- a/demo/index.html
+++ b/demo/index.html
@@ -4,8 +4,10 @@
 		<title>GET-IT jQuery plugin</title>
 		<link rel="stylesheet" href="../dist/jquery.getit.css" />
 	</head>
-	<body>
-    	<h1>Why do we need fair tests of treatments?</h1>
+	<body style="padding: 100px;">
+    	<p><br/></p>
+    	<h1>Example paragraph of text</h1>
+    	<p><br/></p>
     	<p>Modern medicine has been hugely successful at reducing the impact of disease and increasing life expectancy. In spite of this, too much medical decision making is based on insufficient <cite data-term="evidence">evidence</cite>. As a result, doctors and other health professionals have sometimes harmed patients instead of helping them. It is essential that our decisions about what <cite data-term="treatment">treatments</cite> to use are based on <cite data-term="fair comparison of treatments">fair tests</cite> of their <cite data-term="treatment effect">effects</cite>.</p>
     	    
     	    <!-- SCRIPTS BLOCK -->
