Now pulling definitions back from GIG

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,8 +12,7 @@
     	    
     	    <!-- SCRIPTS BLOCK -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-		<script src="../assets/js/jquery.toolpop.js"></script>
-		<script src="../dist/jquery.getit.js"></script>
+		<script src="../dist/jquery.getit.min.js"></script>
 		
 		<script>
 		    /* Run through all <p> tags on the page and scan for <cite> */
