Graceful handling of missing terms. Pull term from cite innerText where term not explicitly specified.

--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
     	<p><br/></p>
     	<h1>Example paragraph of text</h1>
     	<p><br/></p>
-    	<p>Modern medicine has been hugely successful at reducing the impact of disease and increasing life expectancy. In spite of this, too much medical decision making is based on insufficient <cite data-term="evidence">evidence</cite>. As a result, doctors and other health professionals have sometimes harmed patients instead of helping them. It is essential that our decisions about what <cite data-term="treatment">treatments</cite> to use are based on <cite data-term="fair comparison of treatments">fair tests</cite> of their <cite data-term="treatment effect">effects</cite>.</p>
+    	<p>Modern medicine has been hugely successful at reducing the impact of disease and increasing life expectancy. In spite of this, too much medical decision making is based on insufficient <cite>evidence</cite>. As a result, doctors and other health professionals have sometimes harmed patients instead of helping them. It is essential that our decisions about what <cite data-term="treatment">treatments</cite> to use are based on <cite data-term="fair comparison of treatments">fair tests</cite> of their <cite data-term="treatment effect">effects</cite>.</p>
     	    
     	    <!-- SCRIPTS BLOCK -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
