Remove stray angle bracket from code example

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Edit this to change the popup title.</p>
 <pre><code>&lt;script&gt;
     $(document).ready( function(){
         $('<strong><em>#main-content</em></strong>').getit({
-            glossary: '<strong><em>es.getitglossary.org></em></strong>',
+            glossary: '<strong><em>es.getitglossary.org</em></strong>',
         });
     });
 &lt;/script&gt;
